# GeneticHybridizationFramework

./: .gitignore  LICENSE  OLD_script_plot.sh  OLD_scrit_exp1.sh  README.md  STATISTICAL_ANALYSIS_README.md  algorithm_dominance_matrix.csv  compute_indicators.py  compute_metrics_hybridization.py  compute_metrics_standard.py  compute_unified_PF.py  do_Algorithm_plot.py  do_algorithms_plot.py  do_algorithms_plot_with_replicates.py  do_mesh_plot.py  do_mesh_plot_pf.py  do_plot.py  do_plot_genetical_crossing copy.py  do_plot_genetical_crossing.py  do_plot_genetical_crossing_boxplot.py  do_plot_genetical_crossing_line copy.py  do_plot_genetical_crossing_line.py  hybrid_plot.ipynb  hybrid_plot.py  individual_performance_detailed.csv  individual_performance_summary.csv  load_config.py  main.py  merge_hybridization_cases.py  normalize_solutions.py  normalize_standard_traces.py  pyproject.toml  requirements.txt  run_hybrids.sh  run_hybrids_colab.sh  run_hybrids_deep.sh  run_hybrids_ofre.sh  run_hybrids_tomir.sh  run_single.sh  run_statistical_analysis.py  (+12 more)
deprecated/: script_plot_table.sh
results_100/: individual_performance_summary.csv  table_hybrids_100_500.csv  table_standard_400_600.csv  wilcoxon_test_results_convergence.csv  wilcoxon_test_results_final_generation.csv
results_hybrid_400_500/: individual_performance_summary.csv  table_hybrids_400_500.csv  table_standard_400_600.csv  wilcoxon_test_results_convergence.csv  wilcoxon_test_results_final_generation.csv
results_hybridization/: latest
results_imperium/: individual_performance_summary.csv  (+4 more)
test/: results.txt  (+3 more)
(+20 files in other folders)
