[project]
name = "genetichybridization-placement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pulp>=3.2.1",
    "pymoo>=0.6.1.5",
    "seaborn>=0.13.2",
]
