[project]
name = "genetichybridization-placement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pulp>=3.2.1",
    "pymoo>=0.6.1.5",
    "pyvista>=0.45.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
